Bug 266708 - The auto-complete popup doesn't always show (unless invoked manually)
Summary: The auto-complete popup doesn't always show (unless invoked manually)
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: HI major
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-20 03:11 UTC by Avihay
Modified: 2011-06-14 12:21 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Avihay 2011-02-20 03:11:23 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

The auto-complete pop-up doesn't always show (unless invoked manually), according to the rules I specified:
Auto completion enabled - ticked
Auto Word Completion - ticked
Minimal word length to complete - 2 or 3 (haven't tried higher)
(these settings are under the Auto Completion tab of the editing page of the editor component in the Configure - Kate dialog)

By doesn't always show, I mean: shows less then 1% of the time, so pretty much useless :-<. I can make the pop-up show by pressing the the Invoke Code Completion shortcut (ctrl-space) or menu option, but that's not automatic.


Reproducible: Always

Steps to Reproduce:
1) rm ~/.kde/share/config/kate* (optional)
2) run kate and write some text with words that are longer then Minimal word length to complete (3 letters by deafult)
3) rewrite the same text

Actual Results:  
to perform 3), you have to enter the whole text from 2).

Expected Results:  
auto-complete pop-up pops up and offers you to words to speed up your typeing

OS: Linux (i686) release 2.6.35-25-generic
Compiler: cc

kate claims that it's version 3.6.0

happed various times with various versions, and only solution was to change kate version
Comment 1 Milian Wolff 2011-03-03 20:36:55 UTC
can reproduce this way
Comment 2 mardi 2011-04-20 03:26:11 UTC
... not... enough.... votes...

Reproducible on Archlinux: latest version kde, kate and kernel. So its not confined to Ubuntu packages.
Comment 3 Jakob Lund 2011-04-20 15:37:51 UTC
This bug also affects Kile. It is quite annoying.
Comment 4 Christos Lazaridis 2011-04-22 20:08:10 UTC
Also happening with Kate 3.6.2 in Fedora's 4.6.2 KDE packages. 

If anyone can suggest a way we can help debugging this I'd be really happy to help. I've had this for a while now and it's pretty annoying, not to mention how counterproductive...
Comment 5 Michel Ludwig 2011-04-30 11:59:34 UTC
Git commit aa2f5d967ecc18f4088ad2b7f2465a51cdd19385 by Michel Ludwig.
Committed on 30/04/2011 at 12:09.
Pushed by mludwig into branch 'master'.

Don't use the qobject_cast macro for detecting interface inheritance.

The CodeCompletionModelControllerInterface4 interface extends the interface
CodeCompletionModelControllerInterface3 but qobject_cast cannot detect this
inheritance. Hence, the CALLCI macro in katecompletionwidget.cpp always uses
the default implementation for CodeCompletionModelControllerInterface3
instead of the potentially overridden methods that may be present in a code
completion model implementing CodeCompletionModelControllerInterface4.

BUG: 266708

M  +1    -1    part/completion/katecompletionwidget.cpp     

http://commits.kde.org/kate/aa2f5d967ecc18f4088ad2b7f2465a51cdd19385
Comment 6 Jakob Lund 2011-06-12 14:48:14 UTC
So in which KDE version will it be fixed here, on my machine? Looking
forward to reinstated usability :-)


Regards
Jakob.


On Sat, Apr 30, 2011 at 11:59 AM, Michel Ludwig
<michel.ludwig@kdemail.net>wrote:

> https://bugs.kde.org/show_bug.cgi?id=266708
>
>
> Michel Ludwig <michel.ludwig@kdemail.net> changed:
>
>           What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>             Status|NEW                         |RESOLVED
>         Resolution|                            |FIXED
>
>
>
>
> --- Comment #5 from Michel Ludwig <michel ludwig kdemail net>  2011-04-30
> 11:59:34 ---
> Git commit aa2f5d967ecc18f4088ad2b7f2465a51cdd19385 by Michel Ludwig.
> Committed on 30/04/2011 at 12:09.
> Pushed by mludwig into branch 'master'.
>
> Don't use the qobject_cast macro for detecting interface inheritance.
>
> The CodeCompletionModelControllerInterface4 interface extends the interface
> CodeCompletionModelControllerInterface3 but qobject_cast cannot detect this
> inheritance. Hence, the CALLCI macro in katecompletionwidget.cpp always
> uses
> the default implementation for CodeCompletionModelControllerInterface3
> instead of the potentially overridden methods that may be present in a code
> completion model implementing CodeCompletionModelControllerInterface4.
>
> BUG: 266708
>
> M  +1    -1    part/completion/katecompletionwidget.cpp
>
> http://commits.kde.org/kate/aa2f5d967ecc18f4088ad2b7f2465a51cdd19385
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.
>
Comment 7 Michel Ludwig 2011-06-12 15:42:17 UTC
(In reply to comment #6)
> So in which KDE version will it be fixed here, on my machine? Looking
> forward to reinstated usability :-)

The fix should be included in KDE 4.6.4.
Comment 8 Jakob Lund 2011-06-14 12:21:26 UTC
Wow, I got it! This is the best thing (again!) since sliced carrots!

:-D
Jakob.

On Sun, Jun 12, 2011 at 3:42 PM, Michel Ludwig <michel.ludwig@kdemail.net>wrote:

> https://bugs.kde.org/show_bug.cgi?id=266708
>
>
> Michel Ludwig <michel.ludwig@kdemail.net> changed:
>
>           What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |michel.ludwig@kdemail.net
>
>
>
>
> --- Comment #7 from Michel Ludwig <michel ludwig kdemail net>  2011-06-12
> 15:42:17 ---
> (In reply to comment #6)
> > So in which KDE version will it be fixed here, on my machine? Looking
> > forward to reinstated usability :-)
>
> The fix should be included in KDE 4.6.4.
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.
>