Don't use the qobject_cast macro for detecting interface inheritance.

The CodeCompletionModelControllerInterface4 interface extends the interface
CodeCompletionModelControllerInterface3 but qobject_cast cannot detect this
inheritance. Hence, the CALLCI macro in katecompletionwidget.cpp always uses
the default implementation for CodeCompletionModelControllerInterface3
instead of the potentially overridden methods that may be present in a code
completion model implementing CodeCompletionModelControllerInterface4.

BUG: 266708